feat: implement ticket claiming functionality and response handling