@@ -1,5 +1,7 @@
 package com.assesment.lottofun.service;
 
+import com.assesment.lottofun.controller.response.ClaimTicketResponse;
+import com.assesment.lottofun.controller.response.PageResponse;
 import com.assesment.lottofun.controller.response.TicketDetailResponse;
 import com.assesment.lottofun.controller.response.UserProfileResponse;
 import com.assesment.lottofun.entity.Ticket;
@@ -9,11 +11,15 @@ import com.assesment.lottofun.repository.TicketRepository;
 import com.assesment.lottofun.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -21,7 +27,6 @@ import java.util.List;
 public class UserService {
 
     private final UserRepository userRepository;
-    private final TicketRepository ticketRepository;
 
     @Transactional(readOnly = true)
     public UserProfileResponse profile(String email) {
@@ -49,12 +54,93 @@ public class UserService {
 
     @Transactional(readOnly = true)
     public List<TicketDetailResponse> userTicketsForDraw(String userEmail, Long drawId) {
+        User user = userRepository.findByEmailWithTicketsForDraw(userEmail, drawId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + userEmail));
 
-        User user = getUserByEmail(userEmail);
-        return user.getTickets().stream()
-                .filter(f -> f.getDraw().getId().equals(drawId))
+        List<Ticket> tickets = user.getTicketsForDraw(drawId);
+
+        return tickets.stream()
                 .map(TicketDetailResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public PageResponse<TicketDetailResponse> userAllTickets(String userEmail, Pageable pageable) {
+        User user = userRepository.findByEmailWithTickets(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + userEmail));
+
+        List<Ticket> allTickets = user.getAllTicketsSortedByDate();
+
+        int totalElements = allTickets.size();
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), totalElements);
+
+        List<Ticket> pageContent = start < totalElements ?
+                allTickets.subList(start, end) : List.of();
+
+        List<TicketDetailResponse> responseContent = pageContent.stream()
+                .map(TicketDetailResponse::fromEntity)
+                .collect(Collectors.toList());
+
+        Page<TicketDetailResponse> page = new PageImpl<>(
+                responseContent,
+                pageable,
+                totalElements
+        );
+
+        return PageResponse.from(page);
+    }
+
+    @Transactional(readOnly = true)
+    public List<TicketDetailResponse> winningTickets(String userEmail) {
+        User user = userRepository.findByEmailWithTickets(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + userEmail));
+
+        List<Ticket> winningTickets = user.getWinningTickets();
+
+        return winningTickets.stream()
+                .map(TicketDetailResponse::fromEntity)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<TicketDetailResponse> claimableTickets(String userEmail) {
+        User user = userRepository.findByEmailWithTickets(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + userEmail));
+
+        List<Ticket> claimableTickets = user.getClaimableTickets();
+
+        return claimableTickets.stream()
+                .map(TicketDetailResponse::fromEntity)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public ClaimTicketResponse claimTicket(String userEmail, Long ticketId) {
+        User user = userRepository.findByEmailWithTickets(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + userEmail));
+
+        Ticket ticket = user.getTicketById(ticketId);
+        if (ticket == null) {
+            throw new ResourceNotFoundException("Ticket not found or doesn't belong to user");
+        }
+
+        BigDecimal claimedAmount = ticket.getPrizeAmount();
+        String ticketNumber = ticket.getTicketNumber();
+
+        user.claimTicket(ticketId);
+
+        userRepository.save(user);
+
+        log.info("User {} claimed ticket {} for amount {}", userEmail, ticketId, claimedAmount);
+
+        return ClaimTicketResponse.create(
+                ticketId,
+                ticketNumber,
+                claimedAmount,
+                ticket.getClaimedAt(),
+                user.getBalance()
+        );
     }
 
     @Transactional(readOnly = true)
@@ -62,6 +148,7 @@ public class UserService {
         return userRepository.findByEmail(email)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + email));
     }
+
 
     @Transactional
     public void save(User user) {
